@startuml

class AppController {
    - User user
    - DinneriumAccess dinneriumAccess
    ~ NavbarController navbarViewController
}

class SettingsController {
    - User user 
    - NavbarController navbarController
}

class NavbarController {
    - AppController appController
    ~ SettingsController settingsViewController
    ~ FridgeController fridgeViewController
    ~ RecipesController recipesViewController
}

class FridgeController {
    - User user
    - NavbarController navbarController
}

class RecipesController {
    - User user
}

NavbarController -- FridgeController
NavbarController -- SettingsController
NavbarController --> RecipesController
AppController -- NavbarController

@enduml